# gspeech

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
src/: gspeech.py
